[metadata]
name = deli-counter
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = API for Sandwich Cloud
description-file = README.rst
home-page = https://github.com/sandwichcloud/deli-counter
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[files]
packages =
    deli_counter

[entry_points]
console_scripts =
    deli_counter = deli_counter.cli.main:main

[pbr]
skip_authors = 1
skip_changelog = 1